# cpp-wrangle

./: .gitignore  README.org
houdini/cpp/: .dir-locals.el  CMakeLists.txt  CppDOPExecutor.cpp  CppDOPExecutor.h  CppWrangleExecutor.cpp  CppWrangleExecutor.h  LoadPlugin.cpp  ObjectBlob.h  RegisteredObjects.cpp  RegisteredObjects.h
houdini/cpp/cppvex/: CMakeLists.txt  compile  cppvex.h  cppvex_attrib.h  cppvex_attrib_buffer.h  cppvex_bbox.h  cppvex_context.h  cppvex_count.h  cppvex_custom_attrib.cpp  cppvex_custom_attrib.h  cppvex_element.cpp  cppvex_element.h  cppvex_geometry.h  cppvex_groups.h  cppvex_math.h  cppvex_types.h  cppvex_utility.h  sop_node_template.C  sop_node_template.h
houdini/cpp/houfem/: CMakeLists.txt  fem.h  main.cpp  simplex.h  simplex_gm_rule.cpp
houdini/cpp/hougen/: #hougen_groups.h#  hougen.h  hougen.h~  hougen_attrib.h  hougen_attrib.h~  hougen_element.h  hougen_element.h~  hougen_groups.h  hougen_groups.h~  hougen_types.h
houdini/cpp/simplex/: CMakeLists.txt  affine_map.h  integrator.h  main.cpp  simplex.h  simplex_gm_rule.cpp  simplex_gm_rule.h
houdini/cpp/wrangle/: CMakeLists.txt  StructBlob.h  boys_surface_cdd7853f86f9b7b973ad19a8751148cf.cpp  cpp_dop_wrangle_fc42c1943fab57e89aa55db0f0f57569.cpp  cpp_wrangle1_0c2540afd6676b4ea6e67856a45b41a1.cpp  cpp_wrangle1_7d41ee66ae2ef65ddbdaddf388bb0b5c.cpp  cpp_wrangle2_3d31e162885e55b6a4e99a8bd19b9893.cpp  cpp_wrangle2_6f6b74f76e9b928d70b7d20f495113d7.cpp  dop_example_compute_diffusion_operator_ed2e19824ff8012b003d8a8c40c2203e.cpp  dop_example_diffuse_3e81733300331bfbd28a8578401ce152.cpp  example_cpp_wrangle_0e739d9d034eaba4532766df4dac23c9.cpp  example_cpp_wrangle_0e7933265a17a6e8106115e40637f9ef.cpp  example_cpp_wrangle_15b15d96d6a63daab4947af29f9112ea.cpp  example_cpp_wrangle_39f434f761cbdc2487c578faf8f49ebf.cpp  example_cpp_wrangle_41262a2b7a110d8139e33f611e9d9cca.cpp  example_cpp_wrangle_49d95a585bb8009847d4625efc297a77.cpp  example_cpp_wrangle_51f12166c8cb4a4d67bfc5b398faf072.cpp  example_cpp_wrangle_6a2ca0946b18708ae79d8cc83aef0bf4.cpp  example_cpp_wrangle_7237d037b87a291a4e57c426e96ed938.cpp  example_cpp_wrangle_8ccaf90933c0216fe961b78ef89751f1.cpp  example_cpp_wrangle_9f1fa078c3d606ffc05250f375957700.cpp  example_cpp_wrangle_ab2966bf0e0975af04c46335a3ef5039.cpp  example_cpp_wrangle_aeccc9ee232db80b7f084dc341ce2428.cpp  example_cpp_wrangle_bfc151cd1f49794451ae421e8227b8b5.cpp  example_cpp_wrangle_c35ac5919595cd51c0e6286eb8d0c084.cpp  example_cpp_wrangle_f109de840636ea0971ca0b6744275adf.cpp  example_cpp_wrangle_f1ed5998ae9db24136389386ec03c014.cpp  screamer.h
houdini/hip/: ddg2019.hipnc  dop_wrangle.hipnc  examples.hipnc  new_wrangle.hipnc
houdini/hython/: test.py
houdini/include/: affine_map.h  fem.h  houfem.h  integrator.h  simplex_gm_rule.h
houdini/otls/: CppWrangle.hdanc
